--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  sqflite: any
+  path_provider: any
+  intl: ^0.16.1
+
 
 
   # The following adds the Cupertino Icons font to your application.
